# secure-auth-api

./: .env.example  .gitignore  LICENSE  README.md  auth.db  pyproject.toml
alembic/: env.py
alembic/versions/: 0aca4569213c_initial_migration.py  284782d7d241_add_refreshtoken_model.py
src/auth/: config.py  database.py  main.py
src/auth/core/: dependencies.py  rate_limit.py  security.py
src/auth/middleware/: __init__.py  audit.py
src/auth/models/: token.py  user.py
src/auth/routers/: auth.py  users.py
src/auth/schemas/: token.py  user.py
src/auth/services/: auth_service.py
tests/: conftest.py
tests/integration/: test_auth_routes.py  test_middleware.py
tests/unit/: test_schemas.py  test_security.py  test_services.py
