[project]
name = "secure-auth-api"
version = "0.1.0"
description = "Secure Authentication REST API with FastAPI"
authors = [{name = "Ezequiel Ranieri", email = "ez.ranieri@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.1",
    "pydantic[email]>=2.7.2",
    "pydantic-settings>=2.2.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pyotp>=2.9.0",
    "slowapi>=0.1.9",
    "structlog>=24.2.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--tb=short -v"

[dev-dependencies]
pytest = ">=8.2.1"
pytest-asyncio = ">=0.23.7"
httpx = ">=0.27.0"
ruff = ">=0.4.6"
mypy = ">=1.10.0"
